# AndroidPGOExample

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/pgoexample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/profiles/: android-arm64.pgo
app/src/main/java/com/example/pgoexample/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/pgoexample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
